# low-altitude-traffic-system

./: .env.development  .env.production  .eslintrc.js  .gitignore  AIRSPACE_API_VERIFICATION_REPORT.md  API_MODULE_TEST_RESULTS.md  API_SERVICES_USAGE_GUIDE.md  APPLE_DESIGN_UPGRADE_PLAN.md  BUG_FIX_EXECUTION_GUIDE.md  BUG_FIX_REPORT_FINAL.md  COLLABORATION_GUIDE.md  COMPREHENSIVE_TEST_SUMMARY.md  CONTEXT_MENU_DEBUG.md  DAILY_WORK_REPORT_2025-10-12.md  DEPLOYMENT_GUIDE.md  FINAL_VERIFICATION_REPORT.md  FRONTEND_BACKEND_ALIGNMENT_REPORT.md  FRONTEND_BACKEND_INTEGRATION_ANALYSIS.md  IMPLEMENTATION_PLAN.md  MAP_API_V2_FIX.md  MODULE_API_TEST.md  MODULE_API_TEST_RESULTS.md  P1_FIXES_REPORT.md  P2_FIXES_REPORT.md  PROJECT_FUNCTIONALITY_DOCUMENTATION.md  PROJECT_HANDOVER_DOCUMENT.md  QA_TEST_REPORT.md  README.md  ROUTE_PLANNING_INTEGRATION.md  TESTING_GUIDE.md  TEST_ISSUES_FOUND.md  TEST_VERIFICATION_PLAN.md  TODO_LIST_FOR_NEXT_DEVELOPER.md  babel.config.js  backup_emergency_events_20251013_171420.sql  build_and_deploy_guide.md  docker-compose.yml  index.js  package-lock.json  package.json  (+9 more)
backend/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AUTH_API_TESTING.md  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_simple.txt  DESIGN.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JWT_SYSTEM_GUIDE.md  README.md  ROUTES_TO_ADD.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  architecture_design.md  build.bat  build.sh  create_xprotocol_user.sql  create_xprotocol_user_native.sql  flight_task_routes.cpp  insert_test_data.sql  login_result.txt  low_altitude_traffic_system_backend.vcxproj  low_altitude_traffic_system_backend.vcxproj.filters  low_altitude_traffic_system_backend_lib.vcxproj  low_altitude_traffic_system_backend_lib.vcxproj.filters  main.cpp  main.h  main_full.cpp  run.bat  run.sh  server.cpp  server.h  test_auth_api_manual.cpp  test_auth_controller.vcxproj  test_auth_controller.vcxproj.filters  test_build.bat  test_database_connection.vcxproj  test_database_connection.vcxproj.filters  (+10 more)
backend/config/: ENV_SETUP.md  README.md  database.cpp  database.h  server.json  server.json.template
backend/controllers/: AuthController.cpp  AuthController.h  DroneController.cpp  DroneController.h  PaymentController.cpp  PaymentController.h  TaskController.cpp  TaskController.h  WebSocketController.cpp  WebSocketController.h  base_controller.cpp  base_controller.h  flight_task_controller.cpp  flight_task_controller.h  route_controller.cpp  route_controller.h  user_controller.cpp  user_controller.h
backend/database/: schema.sql  simple_schema.sql
backend/low_altitude_traffic_system_backend.dir/Debug/low_alti.7EF98B1B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  (+1 more)
backend/low_altitude_traffic_system_backend.dir/Release/: low_altitude_traffic_system_backend.exe.recipe
backend/low_altitude_traffic_system_backend_lib.dir/Debug/: low_altitude_traffic_system_backend_lib.lib.recipe
backend/models/: airspace.cpp  airspace.h  airspace_dao.cpp  airspace_dao.h  device.cpp  device.h  device_dao.cpp  device_dao.h  emergency_event.cpp  emergency_event.h  emergency_event_dao.cpp  emergency_event_dao.h  emergency_landing_point.cpp  emergency_landing_point.h  emergency_landing_point_dao.cpp  emergency_landing_point_dao.h  flight_conflict.cpp  flight_conflict.h  flight_conflict_dao.cpp  flight_conflict_dao.h  flight_permit.cpp  flight_permit.h  flight_permit_dao.cpp  flight_permit_dao.h  flight_task.cpp  flight_task.h  flight_task_dao.cpp  flight_task_dao.h  route.cpp  route.h  route_dao.cpp  route_dao.h  user.cpp  user.h  user_dao.cpp  user_dao.h  weather.cpp  weather.h  weather_dao.cpp  weather_dao.h
backend/services/: airspace_service.cpp  airspace_service.h  amap_route_service.cpp  amap_route_service.h  device_service.cpp  device_service.h  emergency_service.cpp  emergency_service.h  flight_task_service.cpp  flight_task_service.h  route_service.cpp  route_service.h  traffic_service.cpp  traffic_service.h  user_service.cpp  user_service.h  weather_service.cpp  weather_service.h
backend/sql/: create_airspaces_table.sql
backend/src/: main.cpp  test_auth_controller.cpp  test_database_connection.cpp  test_jwt_service.cpp  test_jwt_standalone.cpp  test_mysql_basic.cpp  test_user_repository.cpp
backend/src/auth/: JwtService.cpp  JwtService.h
backend/src/config/: Config.cpp  Config.h  MockData.h
backend/src/controllers/: AirspaceController.cpp  AirspaceController.h  AuthController.cpp  AuthController.h  ConflictDetectionController.cpp  ConflictDetectionController.h  DroneController.cpp  DroneController.h  EmergencyController.cpp  EmergencyController.h  EmergencyLandingController.cpp  EmergencyLandingController.h  FlightPermitController.cpp  FlightPermitController.h  FlightTaskController.cpp  FlightTaskController.h  SystemMonitorController.cpp  SystemMonitorController.h  WeatherController.cpp  WeatherController.h
backend/src/database/: DatabaseManager.cpp  DatabaseManager.h
backend/src/models/: EmergencyEvent.cpp  EmergencyEvent.h  FlightTask.cpp  FlightTask.h  Geofence.cpp  Geofence.h  User.cpp  User.h
backend/src/repositories/: BaseRepository.cpp  BaseRepository.h  EmergencyEventRepository.cpp  EmergencyEventRepository.h  FlightTaskRepository.cpp  FlightTaskRepository.h  UserRepository.cpp  UserRepository.h
backend/src/server/: HttpServer.cpp  HttpServer.h
backend/src/services/: RouteService.cpp  RouteService.h  WeatherService.cpp  WeatherService.h
backend/src/utils/: CurlHandle.h  HttpResponse.cpp  HttpResponse.h  JsonUtils.cpp  JsonUtils.h  ParamParser.h
backend/test_database_connection.dir/Release/: test_database_connection.exe.recipe
backend/test_jwt_service.dir/Release/: test_jwt_service.exe.recipe
backend/test_jwt_standalone.dir/Debug/: test_jwt_standalone.exe.recipe
backend/test_jwt_standalone.dir/Release/: test_jwt_standalone.exe.recipe
backend/test_user_repository.dir/Release/: test_user_repository.exe.recipe
backend/utils/: db_pool.cpp  db_pool.h  jwt.cpp  jwt.h  password.cpp  password.h
(+196 files in other folders)
